--- a/Proyecto/DacodesJobs/templates/panel/User/formulario.html
+++ b/Proyecto/DacodesJobs/templates/panel/User/formulario.html
@@ -3,16 +3,15 @@
 {% block titulo %} Usuario | {{user.username}} {% endblock titulo %}
 
 {% block breadcrumb %}
-  <li class="breadcrumb-item text-capitalize" aria-current="page"><a href="{% url 'Panel:EmpleadosListar' %}">Usuario</a></li>
+  <li class="breadcrumb-item text-capitalize" aria-current="page">Usuario</li>
   <li class="breadcrumb-item text-capitalize" aria-current="page">{{user.username}}</li>
-
 {% endblock breadcrumb %}
 
 {% block card-header %}
   <div class="container-fluid">
     <div class="row d-flex justify-content-between">
       <span><i class="fa fa-bars"></i> Formulario de Empleados </span>
-      <a href="{% url 'Panel:EmpleadosCrear' %}" class="btn btn-light"><i class="fa fa-unlock-alt"></i> Cambiar contraseña</a>
+      <a href="{% url 'Panel:UsuarioChangePassword' %}" class="btn btn-light"><i class="fa fa-unlock-alt"></i> Cambiar contraseña</a>
     </div>
   </div>
 {% endblock card-header %}
@@ -38,13 +37,17 @@
   {% endif %}
 
   {% if messages %}
-    <div class="alert alert-dismissible alert-success">
-      <button type="button" class="close" data-dismiss="alert">×</button>
-      {% for message in messages %}
-      <span {% if message.tags %} class=" {{ message.tags }} " {% endif %}></span>
-        <strong><i class="fal fa-check-circle"></i> </strong>{{ message }}
-      {% endfor %}
-    </div>
+    {% for message in messages %}
+      <div class="alert alert-{{ message.tags }} alert-dismissible">
+        <button type="button" class="close" data-dismiss="alert">×</button>
+        {% if message.tags == "warning" %}
+          <i class="fal fa-times-circle"></i>
+        {% else %}
+          <i class="fal fa-check-circle"></i>
+        {% endif %}
+        {{ message }}
+      </div>
+    {% endfor %}
   {% endif %}
 
   <form method="post">
@@ -52,21 +55,21 @@
     <div class="form-row">
 			<div class="form-group col-md-6">
 				<label for="inputFirstName">First name</label>
-				<input type="text" class="form-control" name="first_name" id="FirstName" placeholder="First name" value="{{usuario.first_name}}">
+				<input type="text" class="form-control" name="first_name" id="FirstName" placeholder="First name" value="{{user.first_name}}">
 			</div>
 			<div class="form-group col-md-6">
 				<label for="inputLastName">Last name</label>
-				<input type="text" class="form-control" name="last_name" placeholder="Last name" value="{{usuario.last_name}}">
+				<input type="text" class="form-control" name="last_name" placeholder="Last name" value="{{user.last_name}}">
 			</div>
 		</div>
     <div class="form-row">
       <div class="form-group col-md-6">
 				<label for="inputFirstName">User name</label>
-				<input type="text" class="form-control" name="username" placeholder="First name" value="{{usuario.username}}">
+				<input type="text" class="form-control" name="username" placeholder="First name" value="{{user.username}}">
 			</div>
       <div class="form-group col-md-6">
         <label for="inputEmail4">Email</label>
-        <input type="email" class="form-control" name="email" placeholder="Email" value="{{usuario.email}}">
+        <input type="email" class="form-control" name="email" placeholder="Email" value="{{user.email}}">
       </div>
     </div>
     <div class="form-group row">
@@ -76,5 +79,6 @@
     </div>
   </form>
 {% endblock card-body %}
+
 {% block extrajs %}
 {% endblock extrajs %}
