--- a/Proyecto/DacodesJobs/templates/panel/User/change_password.html
+++ b/Proyecto/DacodesJobs/templates/panel/User/change_password.html
@@ -18,12 +18,6 @@
 
 {% block card-body %}
   <div class="container">
-    <ul class="list-group list-group-flush mb-5">
-      <li class="list-group-item"><i class="fal fa-chevron-right"></i> Su contraseña no puede ser similar a su otra información personal.</li>
-      <li class="list-group-item"><i class="fal fa-chevron-right"></i> Su contraseña es muy corta. Debe contener al menos 8 caracteres.</li>
-      <li class="list-group-item"><i class="fal fa-chevron-right"></i> Su contraseña no puede ser una contraseña común.</li>
-      <li class="list-group-item"><i class="fal fa-chevron-right"></i> Su contraseña no puede ser enteramente numérica.</li>
-    </ul>
     {% if messages %}
       {% for message in messages %}
         <div class="alert alert-{{ message.tags }} alert-dismissible">
@@ -34,6 +28,23 @@
             <i class="fal fa-check-circle"></i>
           {% endif %}
           {{ message }}
+
+          <!-- Error messaging -->
+          {% if form.errors %}
+      			{{ form.non_field_errors }}
+      			<ul>
+      				{% for field in form %}
+      					{% if field.errors %}
+                  <li>
+                    <strong> {{ field.label }}: </strong>
+                    {{ field.errors|striptags }}
+                  </li>
+                {% endif %}
+      				{% endfor %}
+      			</ul>
+        	<!-- /Error messaging -->
+
+        {% endif %}
         </div>
       {% endfor %}
     {% endif %}
