--- a/Proyecto/DacodesJobs/templates/panel/partials/sidebar.html
+++ b/Proyecto/DacodesJobs/templates/panel/partials/sidebar.html
@@ -19,7 +19,7 @@
       <i class="fal fa-user-graduate text-primary"></i> Candidatos
   </a>
   <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:DatosEmpresa' %}">
-      <i class="fal fa-industry-alt text-primary"></i> Datos de la empresa
+      <i class="fal fa-industry text-primary"></i> Datos de la empresa
   </a>
   <a class="list-group-item list-group-item-action bg-dark text-light" href="{% url 'Panel:EmpleadosListar' %}">
       <i class="fal fa-users text-primary"></i> Empleados
