--- a/Proyecto/DacodesJobs/templates/users/index.html
+++ b/Proyecto/DacodesJobs/templates/users/index.html
@@ -115,7 +115,7 @@
                     {% endfor %}
                   </div>
                 </div>
-                <p class="text-center mt-3"><a class="btn btn-outline-primary" href="{% url 'AreasTrabajo:Areas' %}" role="button">Ver todos &raquo;</a></p>
+                <p class="text-center mt-3"><a class="btn btn-outline-primary" href="{% url 'AreasTrabajo:Areas' %}" role="button">Ver todos <i class="fal fa-arrow-right"></i></a></p>
               </div>
             </div>
           </div>
@@ -145,7 +145,7 @@
 
               <hr class="featurette-divider">
             {% endfor %}
-            <p class="text-center"><a class="btn btn-outline-primary" href="{% url 'Puestos:Puestos' %}" role="button">Ver todos &raquo;</a></p>
+            <p class="text-center"><a class="btn btn-outline-primary" href="{% url 'Puestos:Puestos' %}" role="button">Ver todos <i class="fal fa-arrow-right"></i></a></p>
           {% endif %}
 
         </div><!-- /.container -->
