--- a/Proyecto/DacodesJobs/templates/panel/User/listado.html
+++ b/Proyecto/DacodesJobs/templates/panel/User/listado.html
@@ -12,7 +12,7 @@
     <div class="row d-flex justify-content-between">
       <span><i class="fal fa-bars"></i> Usuarios Registrados</span>
       {% if user.is_staff %}
-        <a href="{% url 'Panel:PuestosCrear' %}" class="btn btn-light ml-5" type="button" name="button"><i class="fal fa-plus-circle"></i> Nuevo</a>
+        <a href="{% url 'Panel:UsuariosCrear' %}" class="btn btn-light ml-5" type="button" name="button"><i class="fal fa-plus-circle"></i> Nuevo</a>
       {% endif %}
     </div>
   </div>
