--- a/Proyecto/DacodesJobs/templates/panel/Puestos/listado.html
+++ b/Proyecto/DacodesJobs/templates/panel/Puestos/listado.html
@@ -1,6 +1,7 @@
 {% extends 'panel/index.html' %}
 {% load staticfiles %}
 {% block titulo %} Puestos {% endblock titulo %}
+{% load render_table from django_tables2 %}
 
 {% block breadcrumb %}
   <li class="breadcrumb-item text-capitalize" aria-current="page">Puestos Disponibles</li>
@@ -36,70 +37,7 @@
     {% endfor %}
   {% endif %}
   {% if puestos %}
-    <div class="table-responsive">
-      <table class="table table-striped table-hover text-center">
-        <thead>
-          <tr>
-            <th>#</th>
-            <th>Nombre</th>
-            <th>Salario</th>
-            <th>Contrato</th>
-            <th>Estatus</th>
-            <th>Opciones</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for puesto in puestos %}
-          <tr>
-            <th>{{puesto.id}}</th>
-            <td>{{puesto.nombre}}</td>
-            <td>{{puesto.salario}}</td>
-            <td>{{puesto.contrato}}</td>
-            <td>
-              {% if puesto.disponible %}
-                <span class="badge badge-primary">Disponible</span>
-              {% else %}
-                <span class="badge badge-danger">Ocupado</span>
-              {% endif %}
-            </td>
-            <td class="text-center">
-              <a href="{% url 'Panel:PuestosActualizar' puesto.id %}" class="btn btn-primary mb-1">
-                <i class="fal fa-edit"></i>
-              </a>
-              <a href="{% url 'Panel:PuestosEliminar' puesto.id %}" class="btn btn-danger mb-1">
-                <i class="fal fa-trash"></i>
-              </a>
-            </td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-      {% if is_paginated %}
-        <div class="d-flex justify-content-end">
-          <ul class="pagination">
-            {% if page_obj.has_previous %}
-              <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">&laquo;</a></li>
-            {% else %}
-              <li class="page-item disabled"><span class="page-link">&laquo;</span></li>
-            {% endif %}
-
-            {% for i in paginator.page_range %}
-              {% if page_obj.number == i %}
-                <li class="page-item active"><span class="page-link">{{ i }} <span class="sr-only">(current)</span></span></li>
-              {% else %}
-                <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
-              {% endif %}
-            {% endfor %}
-
-            {% if page_obj.has_next %}
-              <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">&raquo;</a></li>
-            {% else %}
-              <li class="page-item disabled"><span class="page-link">&raquo;</span></li>
-            {% endif %}
-          </ul>
-        </div>
-      {% endif %}
-    </div>
+    {% render_table table %}
   {% else %}
     <div class="container">
       <div class="row">
