--- a/Proyecto/DacodesJobs/templates/panel/Puestos/listado.html
+++ b/Proyecto/DacodesJobs/templates/panel/Puestos/listado.html
@@ -78,6 +78,9 @@
 {% endblock card-body %}
 
 {% block extrajs %}
-  <script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
-  <script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
+  <script type="text/javascript">
+    $(document).ready( function () {
+      $('#myTable').DataTable({paging: false,searching: false,info: false});
+    } );
+  </script>
 {% endblock extrajs %}
